--- a/module5/ss7_service/tu-dien/tu-dien-angular/angular.json
+++ b/module5/ss7_service/tu-dien/tu-dien-angular/angular.json
@@ -1,9 +1,9 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1,
+  "version": 1, 
   "newProjectRoot": "projects",
   "projects": {
-    "angular-product-management": {
+    "tu-dien-angular": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angular-product-management",
+            "outputPath": "dist/tu-dien-angular",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,12 +24,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "src/styles.css"
             ],
-            "scripts": [
-
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -65,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular-product-management:build"
+            "browserTarget": "tu-dien-angular:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angular-product-management:build:production"
+              "browserTarget": "tu-dien-angular:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular-product-management:build"
+            "browserTarget": "tu-dien-angular:build"
           }
         },
         "test": {
@@ -113,15 +110,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angular-product-management:serve"
+            "devServerTarget": "tu-dien-angular:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "angular-product-management:serve:production"
+              "devServerTarget": "tu-dien-angular:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "angular-product-management"
+  "defaultProject": "tu-dien-angular"
 }
